--- a/@pauliescanlon/gatsby-theme-terminal/package.json
+++ b/@pauliescanlon/gatsby-theme-terminal/package.json
@@ -4,17 +4,24 @@
   "description": "A terminal style blog",
   "version": "0.0.0",
   "author": "Paul Scanlon <pauliescanlon@gmail.com>",
-  "dependencies": {},
+  "dependencies": {
+    "@emotion/core": "^10.0.27",
+    "@pauliescanlon/gatsby-mdx-routes": "^0.0.8",
+    "@theme-ui/components": "^0.3.1",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-theme-ui": "^0.3.0",
+    "prop-types": "^15.7.2",
+    "theme-ui": "^0.3.1"
+  },
   "devDependencies": {
     "prettier": "^1.19.1"
   },
   "peerDependencies": {
-    "gatsby": "^2.19.7",
-    "gatsby-plugin-mdx": "^1.0.73",
     "@mdx-js/mdx": "^1.5.5",
     "@mdx-js/react": "^1.5.5",
+    "gatsby": "^2.19.7",
+    "gatsby-plugin-mdx": "^1.0.73",
     "gatsby-source-filesystem": "^2.1.46",
-    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
