--- a/@pauliescanlon/gatsby-theme-terminal/package.json
+++ b/@pauliescanlon/gatsby-theme-terminal/package.json
@@ -11,10 +11,12 @@
     "@theme-ui/components": "^0.3.1",
     "gatsby-image": "^2.2.41",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-plugin-sharp": "^2.4.5",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-transformer-sharp": "^2.3.14",
     "prop-types": "^15.7.2",
+    "react-helmet": "^5.2.1",
     "theme-ui": "^0.3.1"
   },
   "devDependencies": {
