--- a/demo/package.json
+++ b/demo/package.json
@@ -9,6 +9,7 @@
     "@mdx-js/react": "^1.5.5",
     "@pauliescanlon/gatsby-theme-terminal": "*",
     "gatsby": "^2.19.7",
+    "gatsby-plugin-google-analytics": "^2.1.36",
     "gatsby-plugin-mdx": "^1.0.73",
     "gatsby-source-filesystem": "^2.1.46",
     "react": "^16.12.0",
