--- a/demo/package.json
+++ b/demo/package.json
@@ -8,6 +8,7 @@
     "@mdx-js/mdx": "^1.5.5",
     "@mdx-js/react": "^1.5.5",
     "@pauliescanlon/gatsby-theme-terminal": "*",
+    "date-fns": "^2.10.0",
     "gatsby": "^2.19.7",
     "gatsby-plugin-google-analytics": "^2.1.36",
     "gatsby-plugin-mdx": "^1.0.73",
