add sitemap and robots.txt plugins

--- a/@pauliescanlon/gatsby-theme-terminal/package.json
+++ b/@pauliescanlon/gatsby-theme-terminal/package.json
@@ -12,7 +12,9 @@
     "gatsby-image": "^2.2.41",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-react-helmet": "^3.1.22",
+    "gatsby-plugin-robots-txt": "^1.5.1",
     "gatsby-plugin-sharp": "^2.4.5",
+    "gatsby-plugin-sitemap": "^2.4.10",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-transformer-sharp": "^2.3.14",
     "prop-types": "^15.7.2",
