--- a/@pauliescanlon/gatsby-theme-terminal/package.json
+++ b/@pauliescanlon/gatsby-theme-terminal/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "@theme-ui/color": "^0.3.1",
-    "@theme-ui/prism": "^0.3.0",
+    "@theme-ui/prism": "^0.4.0-rc.1",
     "date-fns": "^2.10.0",
     "gatsby-image": "^2.2.41",
     "gatsby-plugin-google-fonts": "^1.0.1",
