--- a/demo/package.json
+++ b/demo/package.json
@@ -9,6 +9,7 @@
     "@mdx-js/react": "^1.5.5",
     "@pauliescanlon/gatsby-theme-terminal": "*",
     "date-fns": "^2.10.0",
+    "gatsby-image": "2.2.41",
     "gatsby": "^2.30.0",
     "gatsby-plugin-google-analytics": "^2.1.36",
     "gatsby-plugin-mdx": "^1.0.73",
