--- a/@pauliescanlon/gatsby-theme-terminal/package.json
+++ b/@pauliescanlon/gatsby-theme-terminal/package.json
@@ -11,11 +11,11 @@
     "gatsby-plugin-image": "^1.9.0",
     "gatsby-plugin-react-helmet": "^4.9.0",
     "gatsby-plugin-sharp": "^3.9.0",
-    "gatsby-plugin-theme-ui": "0.3.0",
+    "gatsby-plugin-theme-ui": "^0.10.1",
     "gatsby-transformer-sharp": "^3.9.0",
     "prop-types": "15.7.2",
     "react-helmet": "5.2.1",
-    "theme-ui": "0.3.1"
+    "theme-ui": "^0.10.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
