abstract some graphql queries

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 wip-readme.md
+demo/src/pages/source-days.mdx
+demo/src/pages/source-months.mdx
+demo/src/pages/source-tags.mdx
+demo/src/pages/source-words.mdx
 
 # Logs
 logs
