chore: remove allMdx

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 wip-readme.md
 demo/src/pages/source-days.mdx
+demo/src/pages/source-list.mdx
 demo/src/pages/source-months.mdx
 demo/src/pages/source-tags.mdx
 demo/src/pages/source-words.mdx
