--- a/@pauliescanlon/gatsby-theme-terminal/package.json
+++ b/@pauliescanlon/gatsby-theme-terminal/package.json
@@ -4,18 +4,18 @@
   "version": "0.0.58",
   "author": "Paul Scanlon <pauliescanlon@gmail.com>",
   "dependencies": {
-    "@emotion/core": "10.0.28",
-    "@theme-ui/color": "0.3.0",
-    "@theme-ui/prism": "0.3.0",
+    "@emotion/core": "^10.0.0",
+    "@theme-ui/color": "^0.10.0",
+    "@theme-ui/prism": "^0.10.0",
     "date-fns": "2.10.0",
     "gatsby-plugin-image": "^1.9.0",
     "gatsby-plugin-react-helmet": "^4.9.0",
     "gatsby-plugin-sharp": "^3.9.0",
-    "gatsby-plugin-theme-ui": "^0.3.5",
+    "gatsby-plugin-theme-ui": "^0.10.0",
     "gatsby-transformer-sharp": "^3.9.0",
     "prop-types": "15.7.2",
     "react-helmet": "5.2.1",
-    "theme-ui": "^0.3.5"
+    "theme-ui": "^0.10.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
@@ -26,8 +26,8 @@
     "gatsby": "^3.9.1",
     "gatsby-plugin-mdx": "^2.10.0",
     "gatsby-source-filesystem": "^3.9.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "keywords": [
     "gatsby",
