--- a/@pauliescanlon/gatsby-theme-terminal/package.json
+++ b/@pauliescanlon/gatsby-theme-terminal/package.json
@@ -4,28 +4,30 @@
   "version": "1.1.3",
   "author": "Paul Scanlon <pauliescanlon@gmail.com>",
   "dependencies": {
-    "@emotion/core": "^10.0.0",
+    "@emotion/react": "^11.4.0",
     "@theme-ui/color": "^0.10.0",
     "@theme-ui/prism": "^0.10.0",
-    "date-fns": "2.10.0",
+    "date-fns": "^2.23.0",
     "gatsby-plugin-image": "^1.10.1",
-    "gatsby-plugin-react-helmet": "^4.9.0",
+    "gatsby-plugin-mdx": "^2.10.1",
+    "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-sharp": "^3.10.2",
-    "gatsby-plugin-theme-ui": "^0.10.0",
+    "gatsby-plugin-theme-ui": "^0.10.1",
+    "gatsby-source-filesystem": "^3.10.0",
     "gatsby-transformer-sharp": "^3.10.0",
     "prop-types": "15.7.2",
-    "react-helmet": "5.2.1",
+    "react-helmet": "^6.1.0",
     "theme-ui": "^0.10.0"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^2.3.2"
   },
   "peerDependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^3.9.1",
     "gatsby-plugin-mdx": "^2.10.0",
-    "gatsby-source-filesystem": "^3.9.0",
+    "gatsby-source-filesystem": "^3.10.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
