--- a/package.json
+++ b/package.json
@@ -18,5 +18,15 @@
     "@commitlint/config-conventional": "^12.1.4",
     "husky": "^7.0.1",
     "prettier": "^2.3.2"
+  },
+  "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "@pauliescanlon/gatsby-theme-terminal": "^2.0.0",
+    "gatsby": "^4.12.1",
+    "gatsby-plugin-mdx": "^3.12.1",
+    "gatsby-source-filesystem": "^4.12.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
